# django_dev_env

./: .pre-commit-config.yaml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
drf_learner/: Dockerfile  db.sqlite3  pyproject.toml  test.py
drf_learner/app/: settings.py
drf_learner/tests/: test_drf_learner.py
